--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="name_chat">ChatActivity</string>
     <string name="name_auth_ui">Auth UI demo</string>
+    <string name="driver_app_rev_2">FoodRev Driver App -- Second Rev</string>
 
     <string name="desc_chat">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
     <string name="desc_auth_ui">Demonstrates the Firebase Auth UI flow, with customization options.</string>
