--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="desc_chat">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
     <string name="desc_auth_ui">Demonstrates the Firebase Auth UI flow, with customization options.</string>
+    <string name="desc_app_rev_2">Demonstrates Firebase Revision 2 Features</string>
 
     <!-- strings for Auth UI demo activities -->
     <eat-comment />
@@ -42,4 +43,6 @@
     <string name="default_theme">Default theme</string>
     <string name="configuration_required">Configuration is required - see README.md</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="title_activity_driver_rev2">DriverRev2Activity</string>
+    <string name="action_settings">Settings</string>
 </resources>
